<?xml version="1.0"?>

<package>

  <name>kobuki_slam</name>
  <version>0.1.0</version>
  <description>The SLAM package for Kobuki</description>

  <maintainer email="abhi.ravikumar@protonmail.com">Abhi Ravikumar</maintainer>

  <url type="git">https://github.com/AbhiRP/Kobuki-SLAM</url>

  <license>The MIT License</license>

  <author email="abhi.ravikumar@protonmail.com">Abhi Ravikumar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kobuki_node</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urg_node</build_depend>

  <run_depend>kobuki_node</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urg_node</run_depend>

  <export>
  </export>

</package>