<?xml version="1.0"?>

<package>

  <name>kobuki_tf</name>
  <version>0.1.0</version>
  <description>The transform package</description>

  <maintainer email="abhi.ravikumar@protonmail.com">Abhi Ravikumar</maintainer>

  <url type="git">https://github.com/AbhiRP/Kobuki-SLAM</url>

  <license>The MIT License</license>

  <author email="abhi.ravikumar@protonmail.com">Abhi Ravikumar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>

</package>
